--- a/flycat-springboot/flycat-redis/build.gradle
+++ b/flycat-springboot/flycat-redis/build.gradle
@@ -1,7 +1,9 @@
+apply from: "${gradleConfigDir}/springbootProject.gradle"
+
 dependencies {
     api project(':flycat-spi')
     api project(':flycat-context')
-    api project(':flycat-spi')
+    api project(':flycat-util')
     // api "org.springframework.boot:spring-boot-starter-data-redis:$springBootVersion"
     api "org.springframework.boot:spring-boot-starter-data-redis"
 }
