--- a/flycat-context/build.gradle
+++ b/flycat-context/build.gradle
@@ -4,7 +4,7 @@ dependencies {
     api project(':flycat-util')
 
     // compileOnly "org.springframework.boot:spring-boot:$springBootVersion"
-    compileOnly "org.springframework.boot:spring-boot"
+//    compileOnly "org.springframework.boot:spring-boot"
     compileOnly group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 }
 
