--- a/flycat-datasource/flycat-ds-hikari/build.gradle
+++ b/flycat-datasource/flycat-ds-hikari/build.gradle
@@ -3,7 +3,7 @@ dependencies {
     api project(':flycat-ds')
     api group: 'com.zaxxer', name: 'HikariCP', version: '3.3.1'
 
-//    api group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
+//    api group: 'jakarta.validation', name: 'validation-api', version: '2.0.1.Final'
 }
 
 
