--- a/flycat-springboot/flycat-configure/build.gradle
+++ b/flycat-springboot/flycat-configure/build.gradle
@@ -1,3 +1,5 @@
+apply from: "${gradleConfigDir}/springbootProject.gradle"
+
 dependencies {
 
     // api "org.springframework.boot:spring-boot-autoconfigure:$springBootVersion"
@@ -17,11 +19,19 @@ dependencies {
 
     compileOnly project(':flycat-ds')
 
-    compileOnly group: 'javax.servlet', name: 'javax.servlet-api', version: '4.0.1'
+    compileOnly group: 'jakarta.servlet', name: 'jakarta.servlet-api', version: '5.0.0'
+
+
+// https://mvnrepository.com/artifact/jakarta.validation/jakarta.validation-api
+    implementation group: 'jakarta.validation', name: 'jakarta.validation-api', version: '3.0.2'
+
+//    compileOnly group: 'jakarta.servlet', name: 'jakarta.servlet-api', version: '4.0.1'
     compileOnly group: 'com.alibaba', name: 'fastjson', version: '1.2.58'
 
-//    api group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
-    compileOnly 'org.hibernate.validator:hibernate-validator:6.0.18.Final'
+//    api group: 'jakarta.validation', name: 'validation-api', version: '2.0.1.Final'
+
+//    compileOnly 'org.hibernate.validator:hibernate-validator:6.0.18.Final'
+    compileOnly 'org.hibernate.validator:hibernate-validator:7.0.5.Final'
 }
 
 
