Fix bean creation

--- a/flycat-springboot/flycat-configure/src/main/resources/META-INF/spring-autoconfigure-metadata.properties
+++ b/flycat-springboot/flycat-configure/src/main/resources/META-INF/spring-autoconfigure-metadata.properties
@@ -14,5 +14,5 @@
 # limitations under the License.
 #
 
-com.github.flycat.autoconfigure.WebConfiguration.ConditionalOnClass=com.github.flycat.web.WebFactoryConfiguration
+#com.github.flycat.autoconfigure.WebConfiguration.ConditionalOnClass=com.github.flycat.web.WebFactoryConfiguration
 com.github.flycat.autoconfigure.WechatConfiguration.ConditionalOnClass=com.github.flycat.wechat.WechatLogin
