--- a/build.gradle
+++ b/build.gradle
@@ -16,12 +16,13 @@ buildscript {
 //        classpath "org.springframework.boot:spring-boot-gradle-plugin:${springBootVersion}"
 //        classpath 'org.springframework:springloaded:1.2.0.RELEASE'
         classpath "org.springframework.boot:spring-boot-gradle-plugin:3.0.0-RC1" //
+        classpath "io.spring.gradle:dependency-management-plugin:1.1.0"
     }
 }
 
 plugins {
 //    id 'org.springframework.boot' version '2.7.4' apply false
-    id "io.spring.dependency-management" version "1.1.0" apply false
+//    id "io.spring.dependency-management" version "1.1.0" apply false
 
     id "com.github.hierynomus.license" version "0.15.0" apply false
 //    id "io.freefair.lombok" version "4.1.0" apply false
