--- a/config/gradle/javaProject.gradle
+++ b/config/gradle/javaProject.gradle
@@ -6,9 +6,13 @@ dependencies {
 
     api group: 'com.google.guava', name: 'guava', version: '25.1-jre'
 //    api group: 'com.alibaba', name: 'fastjson', version: '1.2.58'
-    api group: 'org.slf4j', name: 'slf4j-api', version: '1.7.26'
+    compileOnly group: 'org.slf4j', name: 'slf4j-api', version: '1.7.32'
 //    api group: 'org.jetbrains', name: 'annotations', version: '13.0'
-    api group: 'javax.inject', name: 'javax.inject', version: '1'
+//    api group: 'jakarta.inject', name: 'jakarta.inject', version: '1'
+
+// https://mvnrepository.com/artifact/jakarta.inject/jakarta.inject-api
+    implementation group: 'jakarta.inject', name: 'jakarta.inject-api', version: '2.0.1'
+
     api group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
 
     api 'org.javassist:javassist:3.21.0-GA'
