--- a/flycat-springboot/flycat-app/build.gradle
+++ b/flycat-springboot/flycat-app/build.gradle
@@ -28,7 +28,11 @@ dependencies {
     api("org.springframework.boot:spring-boot-starter-actuator")
     api("org.springframework.boot:spring-boot-starter-security")
 
-    api group: 'de.codecentric', name: 'spring-boot-admin-starter-client', version: '2.7.5'
+//    api group: 'de.codecentric', name: 'spring-boot-admin-starter-client', version: '2.7.5'
+
+// https://mvnrepository.com/artifact/de.codecentric/spring-boot-admin-starter-client
+    implementation group: 'de.codecentric', name: 'spring-boot-admin-starter-client', version: '3.0.0-M5'
+
 //    }
 
     testImplementation group: 'org.mockito', name: 'mockito-core', version: '2.10.0'
