--- a/flycat-springboot/flycat-web/build.gradle
+++ b/flycat-springboot/flycat-web/build.gradle
@@ -4,8 +4,12 @@ dependencies {
     api(project(':flycat-web')) {
         exclude group: 'jakarta.validation', module: 'validation-api'
     }
+//    api group: 'jakarta.servlet', name: 'jakarta.servlet-api', version: '5.0.0'
 
-    api("org.springframework.boot:spring-boot-starter-web") 
+    api("org.springframework.boot:spring-boot-starter-web")
+// https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-tomcat
+//    api group: 'org.springframework.boot', name: 'spring-boot-starter-tomcat'
+
     // api("org.springframework.boot:spring-boot-starter-web:$springBootVersion") {
     //     exclude group: 'org.springframework.boot', module: 'spring-boot-starter-tomcat'
     // }
@@ -16,11 +20,12 @@ dependencies {
 
 
 // https://mvnrepository.com/artifact/jakarta.validation/jakarta.validation-api
-    implementation group: 'jakarta.validation', name: 'jakarta.validation-api', version: '3.0.2'
+    api group: 'jakarta.validation', name: 'jakarta.validation-api', version: '3.0.2'
 //    implementation group: 'jakarta.validation', name: 'jakarta.validation-api', version: '2.0.2'
 //    api group: 'jakarta.validation', name: 'validation-api', version: '2.0.1.Final'
 //    api 'jakarta.servlet:jakarta.servlet-api:3.1.0'
     compileOnly group: 'com.alibaba', name: 'fastjson', version: '1.2.58'
 
     implementation group: 'io.dropwizard.metrics', name: 'metrics-core', version: '4.1.0'
+
 }
