--- a/flycat-spi-impl/flycat-cache-redis/build.gradle
+++ b/flycat-spi-impl/flycat-cache-redis/build.gradle
@@ -1,7 +1,7 @@
 
 dependencies {
     implementation project(':flycat-spi')
-    implementation project(':flycat-spi')
+    implementation project(':flycat-util')
 }
 
 
