--- a/flycat-spi-impl/flycat-config-nacos/build.gradle
+++ b/flycat-spi-impl/flycat-config-nacos/build.gradle
@@ -1,7 +1,9 @@
 
 dependencies {
-    api project(':flycat-spi')
+    implementation project(':flycat-spi')
+    implementation project(':flycat-context')
+//    implementation project(':flycat-util')
 //    implementation group: 'com.alibaba.nacos', name: 'nacos-client', version: '0.9.1'
-    api group: 'com.alibaba.nacos', name: 'nacos-client', version: '2.1.2'
+    implementation group: 'com.alibaba.nacos', name: 'nacos-client', version: '2.1.2'
 }
 
