--- a/flycat-spi-impl/flycat-config-redis/build.gradle
+++ b/flycat-spi-impl/flycat-config-redis/build.gradle
@@ -1,7 +1,7 @@
 
 dependencies {
-    api project(':flycat-context')
-    api project(':flycat-spi')
+    implementation project(':flycat-context')
+    implementation project(':flycat-spi')
     implementation project(':flycat-spi')
 }
 
