--- a/flycat-springboot/flycat-dubbo/build.gradle
+++ b/flycat-springboot/flycat-dubbo/build.gradle
@@ -1,10 +1,10 @@
 
 dependencies {
-    api project(':flycat-context')
+    implementation project(':flycat-context')
 
-    api'org.apache.dubbo:dubbo-spring-boot-starter:2.7.3'
-    api group: 'com.alibaba.nacos', name: 'nacos-client', version: '0.9.1'
-    api group: 'org.apache.dubbo', name: 'dubbo-registry-nacos', version: "${dubboVersion}"
+    implementation 'org.apache.dubbo:dubbo-spring-boot-starter:2.7.3'
+    implementation group: 'com.alibaba.nacos', name: 'nacos-client', version: '0.9.1'
+    implementation group: 'org.apache.dubbo', name: 'dubbo-registry-nacos', version: "${dubboVersion}"
 }
 
 
