--- a/config/gradle/javaProject.gradle
+++ b/config/gradle/javaProject.gradle
@@ -1,28 +1,28 @@
 apply plugin: "java"
-apply plugin: "java-library"
+//apply plugin: "java-library"
 
 dependencies {
-//    api group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
+//    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
 
-    api group: 'com.google.guava', name: 'guava', version: '25.1-jre'
-//    api group: 'com.alibaba', name: 'fastjson', version: '1.2.58'
+    implementation group: 'com.google.guava', name: 'guava', version: '25.1-jre'
+//    implementation group: 'com.alibaba', name: 'fastjson', version: '1.2.58'
     compileOnly group: 'org.slf4j', name: 'slf4j-api', version: '1.7.32'
-//    api group: 'org.jetbrains', name: 'annotations', version: '13.0'
-//    api group: 'jakarta.inject', name: 'jakarta.inject', version: '1'
+//    implementation group: 'org.jetbrains', name: 'annotations', version: '13.0'
+//    implementation group: 'jakarta.inject', name: 'jakarta.inject', version: '1'
 
 // https://mvnrepository.com/artifact/jakarta.inject/jakarta.inject-api
     implementation group: 'jakarta.inject', name: 'jakarta.inject-api', version: '2.0.1'
 
-    api group: 'javax.annotation', name: 'javax.annotation-api', version: '1.3.2'
+//    implementation group: 'javax.annotation', name: 'javax.annotation-api ', version: '1.3.2'
 
-    api 'org.javassist:javassist:3.21.0-GA'
-    api 'org.reflections:reflections:0.9.9-RC2'
+    implementation 'org.javassist:javassist:3.21.0-GA'
+    implementation 'org.reflections:reflections:0.9.9-RC2'
 
 
-    api 'com.google.code.findbugs:jsr305:3.0.2'
+    implementation 'com.google.code.findbugs:jsr305:3.0.2'
     // vendor
 // https://mvnrepository.com/artifact/org.apache.commons/commons-text
-//    api group: 'org.apache.commons', name: 'commons-text', version: '1.6'
+//    implementation group: 'org.apache.commons', name: 'commons-text', version: '1.6'
 
     testImplementation 'junit:junit:4.12'
 }
