--- a/flycat-datasource/flycat-ds-hikari/build.gradle
+++ b/flycat-datasource/flycat-ds-hikari/build.gradle
@@ -1,9 +1,9 @@
 
 dependencies {
-    api project(':flycat-ds')
-    api group: 'com.zaxxer', name: 'HikariCP', version: '3.3.1'
+    implementation project(':flycat-ds')
+    implementation group: 'com.zaxxer', name: 'HikariCP', version: '3.3.1'
 
-//    api group: 'jakarta.validation', name: 'validation-api', version: '2.0.1.Final'
+//    implementation group: 'jakarta.validation', name: 'validation-implementation ', version: '2.0.1.Final'
 }
 
 
