--- a/flycat-lib/flycat-markdown/build.gradle
+++ b/flycat-lib/flycat-markdown/build.gradle
@@ -1,7 +1,7 @@
 
 dependencies {
-    api project(':flycat-util')
-    api 'com.vladsch.flexmark:flexmark-all:0.50.42'
+    implementation project(':flycat-util')
+    implementation 'com.vladsch.flexmark:flexmark-all:0.50.42'
 }
 
 
