--- a/flycat-spi-impl/flycat-cache-ehcache/build.gradle
+++ b/flycat-spi-impl/flycat-cache-ehcache/build.gradle
@@ -1,7 +1,7 @@
 
 dependencies {
-    api project(':flycat-spi')
-    api 'org.ehcache:ehcache:3.7.0'
+    implementation project(':flycat-spi')
+    implementation 'org.ehcache:ehcache:3.7.0'
     implementation 'javax.cache:cache-api:1.1.1'
 }
 
