--- a/flycat-spi-impl/flycat-json-jackson/build.gradle
+++ b/flycat-spi-impl/flycat-json-jackson/build.gradle
@@ -1,8 +1,8 @@
 
 dependencies {
-    api project(':flycat-spi')
-    api group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.9'
-    api group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.9'
+    implementation project(':flycat-spi')
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-databind', version: '2.9.9'
+    implementation group: 'com.fasterxml.jackson.core', name: 'jackson-core', version: '2.9.9'
 }
 
 
