--- a/flycat-spi/build.gradle
+++ b/flycat-spi/build.gradle
@@ -1,6 +1,7 @@
 dependencies {
-    api project(':flycat-context')
+    implementation project(':flycat-context')
+    implementation project(':flycat-util')
 
-    api group: 'io.dropwizard.metrics', name: 'metrics-core', version: '4.1.0'
+    implementation group: 'io.dropwizard.metrics', name: 'metrics-core', version: '4.1.0'
     compileOnly group: 'ch.qos.logback', name: 'logback-classic', version: '1.2.3'
 }
