--- a/flycat-web/build.gradle
+++ b/flycat-web/build.gradle
@@ -1,12 +1,13 @@
 
 dependencies {
-    api project(':flycat-context')
-    api project(':flycat-spi')
-//    api group: 'jakarta.validation', name: 'validation-api', version: '2.0.1.Final'
+    implementation project(':flycat-context')
+    implementation project(':flycat-spi')
+    implementation project(':flycat-util')
+//    implementation group: 'jakarta.validation', name: 'validation-implementation ', version: '2.0.1.Final'
     // https://mvnrepository.com/artifact/jakarta.servlet/jakarta.servlet-api
     compileOnly group: 'jakarta.servlet', name: 'jakarta.servlet-api', version: '5.0.0'
 
-    api group: 'jakarta.validation', name: 'jakarta.validation-api', version: '3.0.2'
+    implementation group: 'jakarta.validation', name: 'jakarta.validation-api', version: '3.0.2'
 
-//    api 'jakarta.servlet:jakarta.servlet-api:3.1.0'
+//    implementation 'jakarta.servlet:jakarta.servlet-api:3.1.0'
 }
