--- a/config/gradle/env.gradle
+++ b/config/gradle/env.gradle
@@ -15,6 +15,13 @@ ext.isTest = { env ->
 //    return "test".equals() || "testdocker".equals(env.toString())
 }
 
+
+ext.isLocal = { env ->
+    return env.toString().contains("local")
+//    return "test".equals() || "testdocker".equals(env.toString())
+}
+
+
 //ext.isDocker = {
 //    env -> return env.toString().contains("docker")
 //}
@@ -24,8 +31,11 @@ ext.isRunTask = { tasks ->
     def executingTasks = project.gradle.startParameter.taskNames
     if (executingTasks != null && !executingTasks.isEmpty()) {
         for(item in tasks) {
-            if (item in executingTasks) {
-                return true
+            logger.debug("${item} ${executingTasks}")
+            for (execTask in executingTasks) {
+                if (execTask.contains(item)) {
+                    return true
+                }
             }
         }
     }
@@ -42,6 +52,12 @@ ext.isDockerBuild = {
 //    return executeDockerBuild
     return isRunTask(['jib', 'jibDockerbuild'])
 }
+
+//processAot
+ext.isNativeTask = {
+    return isRunTask(['nativeCompile', 'processAot'])
+}
+
 
 ext.isRunUnitTest = {
 //    def executeDockerBuild = false
